--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,15 @@
----
-
-## 📄 **File 4: `.gitignore`**
-
-```gitignore
 # Database files
 *.db
 *.sqlite
 *.sqlite3
 
-# Python
+# Python cache
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Virtual Environment
+# Virtual environment
 venv/
 env/
 ENV/
@@ -41,7 +20,7 @@ ENV/
 *.swp
 *.swo
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
